product_docs/docs/jdbc_connector/42.5.0.1/04_installing_and_configuring_the_jdbc_connector/01_installing_the_connector_with_an_rpm_package/x86_amd64/jdbc42_deb10_x86.mdx
---
navTitle: Debian 10
title: Installing EDB JDBC Connector on Debian 10 x86_64
---

## Prerequisites

Before you begin the installation process:

- Install EDB Postgres Advanced Server on a host that the product can connect to using a connection string. It doesn't need to be on the same host. See [Installing EDB Postgres Advanced Server](/epas/latest/epas_inst_linux).
- Review [Supported JDBC distributions](/jdbc_connector/latest/02_requirements_overview/#supported-jdk-distribution).

- Set up the repository

  Setting up the repository is a one-time task. If you have already set up your repository, you do not need to perform this step.

  To set up the repository, go to [EDB repositories](https://www.enterprisedb.com/repos-downloads) and follow the instructions provided there.

```shell
#  Set up the EDB repository
echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list

#  Replace '<USERNAME>' and '<PASSWORD>' below with
#  your username and password for the EDB repositories:
echo "machine apt.enterprisedb.com login <USERNAME> password <PASSWORD>" > /etc/apt/auth.conf.d/edb.conf

#  Add support for secure APT repositories:
sudo apt-get -y install apt-transport-https

#  Add the EDB signing key. Substitute your EnterpriseDB credentials
#  for the '<USERNAME>' and '<PASSWORD>' placeholders.
wget -q -O - https://<USERNAME>:<PASSWORD>@apt.enterprisedb.com/edb-deb.gpg.key  | sudo apt-key add -

#  Update the repository metadata:
sudo apt-get update
```

## Install the package

```shell
sudo apt-get install edb-jdbc
```
